--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "precommit": "npm run lint"
+    "precommit": "npm run commitlint && npm run lint",
+    "commitlint": "commitlint -e"
   },
   "private": true,
   "dependencies": {
