--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "precommit": "npm run lint && npm run commitlint",
+    "precommit": "npm run commitlint lint",
     "commitlint": "commitlint -e",
-    "test cover":"rm -rf ./coverag && ng test --no-watch --code-coverage",
+    "test cover": "rm -rf ./coverage ng test --no-watch --code-coverage",
     "coveralls":  "cat ./coverage/lcov.info | ./node_modules/coveralls.js"
   },
   "private": true,
