--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,6 @@ script:
   - xvfb-run -a npm run e2e -- --no-progress --config=protractor-ci.conf.js
 
 after_success:
-  - npm run coveralls
+  - npm run coveralls.js
+
+
