--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "precommit": "npm run lint",
+    "precommit": "npm run commitlint",
+    "precommit": "npm run lint ",
     "commitlint": "commitlint -e",
-    "test cover": "ng test --no-watch --code-coverage",
-    "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls.js"
+    "test cover":"ng test --no-watch --code-coverage",
+    "test cover":"rm -rf ./coverage",
+    "coveralls":  "cat ./coverage/lcov.info | ./node_modules/coveralls.js"
   },
   "private": true,
   "dependencies": {
