--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "commitlint": "commitlint -e",
     "test:cover":"ng test --no-watch --code-coverage",
     "test:cover":"rm -rf ./coverage",
-    "coveralls":  "cat ./coverage/lcov.info | ./node_modules/coveralls.js"
+    "coveralls":  "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "private": true,
   "dependencies": {
